--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -16,6 +16,7 @@
   <properties>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
     <asciidoc.path>/js</asciidoc.path>
+    <log4j2.version>2.15.0</log4j2.version>
     <graphql.java.major.version>13</graphql.java.major.version>
     <graphql.java.version>${graphql.java.major.version}.0</graphql.java.version>
     <datastax-driver.minor.version>3.5</datastax-driver.minor.version>
@@ -669,12 +670,12 @@
           <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.8.2</version>
+            <version>${log4j2.version}</version>
           </dependency>
           <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.8.2</version>
+            <version>${log4j2.version}</version>
           </dependency>
           <dependency>
             <groupId>org.slf4j</groupId>
